--- a/config.ini
+++ b/config.ini
@@ -1,6 +1,6 @@
 [database]
-host = localhost
-port = 3306
-database = finanzas
-user = root
-password = xxxxxxx
+DB_HOST=localhost
+DB_PORT=3306
+DB_NAME=finanzas
+DB_USER=root
+DB_PASS=glider911
