--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -17,14 +17,16 @@ services:
       - 3306:3306
     volumes:
       - ./init.sql:/docker-entrypoint-initdb.d/init.sql
+      - ./database.py:/app/database.py  # Montar el archivo database.py como volumen
     networks:
       - mynetwork
 
-  adminer:
-    image: adminer
+  zabbix-agent:
+    image: zabbix/zabbix-agent2
     restart: always
-    ports:
-      - 8080:8080
+    environment:
+      - ZBX_SERVER_HOST: 192.168.20.50
+      - ZBX_SERVER_PORT: 1050
     networks:
       - mynetwork
 
